<resources>
    <string name="app_name">Thesaurus</string>
    <string name="sets">Term sets</string>
    <string name="profile_placeholder">Profile</string>
    <string name="user_name">Username</string>
    <string name="user_name_placeholder">Your profile name</string>
    <string name="toolbar_create_set">Create set</string>
    <string name="hint_title">Title</string>
    <string name="hint_term">Term</string>
    <string name="hint_definition">Definition</string>
    <string name="fab_add">Add term</string>
    <string name="edit_set_title">Edit set</string>
    <string name="menu_delete">Delete this set</string>
    <string name="def_username">You</string>

    <string name="terms_count">%1$d terms</string>
    <string name="cards_title">Cards</string>

    <string name="card_game1">Learn</string>
    <string name="card_game2">Word scramble</string>
    <string name="card_game3">True/False</string>
    <string name="card_soon">soon</string>

    <string name="set_name_placeholder">Some set</string>
    <string name="unscramble_placeholder">Your answer here</string>

    <string name="game_nice">Nice!</string>
    <string name="game_wrong">You are wrong</string>
    <string name="game_correct">Correct</string>
    <string name="game_incorrect">Incorrect</string>
    <string name="game_result_title_good">Congratulations!</string>
    <string name="game_result_title_bad">You can do better…</string>
    <string name="game_result_info">You have answered %1$d/%2$d correctly!</string>

    <string name="title_correct_answer">correct answer:</string>
    <string name="title_wrong_answer">your answer:</string>

    <string name="btn_continue">Continue</string>
    <string name="btn_repeat_game">Learn again</string>
    <string name="btn_end_game">Finish</string>
    <string name="btn_unscramble">Unscramble</string>
</resources>