<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="@color/incorrect_answer">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/game_nice"
                android:scaleX="1.4"
                android:scaleY="1.4"
                android:src="@drawable/ic_confused" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:text="@string/game_wrong"
                android:textAllCaps="true"
                android:textColor="@color/primary"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/txtTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_term"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_correct_answer"
                android:textAllCaps="true"
                android:textSize="11sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/correct_answer"/>

            <TextView
                android:id="@+id/txtCorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_definition"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_wrong_answer"
                android:textAllCaps="true"
                android:textSize="11sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/incorrect_answer" />

            <TextView
                android:id="@+id/txtWrongAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_definition"
                android:textSize="16sp"
                android:fontFamily="@font/roboto" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_continue"
            android:textColor="@color/accent"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:background="@color/primary"/>


    </LinearLayout>



</com.google.android.material.card.MaterialCardView>

