<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingTop="25dp"
        android:paddingBottom="15dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_account"
            app:tint="@color/accent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgProfile"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/roboto_black"
            android:text="@string/profile_placeholder"
            android:textAlignment="center"
            android:textSize="25sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/ripple_list_items"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_placeholder"
            android:textSize="14sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/accent"/>

    </LinearLayout>


</LinearLayout>