<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/primary"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@id/resultStatus"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/hint_term"
                android:textColor="@color/on_primary_var"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTermDefinition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/hint_definition"
                android:textColor="@color/on_primary_var"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/correct_answer"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp">


            <ImageView
                android:id="@+id/imgResultStatus"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_done" />

            <TextView
                android:id="@+id/txtResultStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/game_correct"
                android:textColor="@color/primary"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>