<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_activities.LearnActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_game"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <RelativeLayout
        android:id="@+id/termContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/buttonsContainer"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/txtTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/hint_term"
            android:textColor="@color/on_primary"
            android:textSize="24sp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/txtTerm"
            android:layout_marginVertical="5dp"
            android:alpha="0.2"
            android:background="@color/primary_var" />

        <TextView
            android:id="@+id/txtDefinition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/hint_definition"
            android:textColor="@color/on_primary_var"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCorrect"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/accent"
            app:rippleColor="@color/accent_ripple"
            android:textColor="@color/primary"
            android:text="@string/game_correct" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIncorrect"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/accent"
            app:rippleColor="@color/accent_ripple"
            android:textColor="@color/primary"
            android:text="@string/game_incorrect" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>