<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_activities.WordScrambleActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/scrambledWord"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingHorizontal="20dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrambledWord"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:clipToPadding="false"
        android:clipChildren="false">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyleOnBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/unscramble_placeholder"
            app:errorEnabled="false">

            <Button
                android:id="@+id/buttonUnscramble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent"
                android:fontFamily="@font/roboto"
                android:text="@string/btn_unscramble"
                android:textColor="@color/primary"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:rippleColor="@color/accent_ripple" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInput"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>