<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSetActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view_set" android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerTermSlider"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/txtSetTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:fontFamily="@font/roboto_black"
                android:textSize="25sp"
                android:text="@string/set_name_placeholder"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_account_circle_24"
                    app:tint="@color/on_primary"
                    android:contentDescription="@string/app_name"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/user_name_placeholder"
                    android:layout_marginEnd="10dp"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/on_primary"
                    android:alpha="0.2"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/txtTermsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/roboto_medium"
                    android:textSize="14sp"
                    android:text="@string/terms_count"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    android:layout_marginEnd="5dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:clipToPadding="false">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    android:layout_marginEnd="5dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    android:layout_marginHorizontal="5dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardElevation="2dp"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>